Closed Bug 1623071 Opened 6 years ago Closed 6 years ago

Perma build bustages /builds/worker/checkouts/gecko/js/src/jit/CacheIR.h:2688:15: error: private field 'lhsVal_' is not used [-Werror,-Wunused-private-field] - when Gecko 76 merges to Beta on 2020-04-06

Categories

(Core :: JavaScript Engine: JIT, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla76
Tracking Status
firefox-esr68 --- unaffected
firefox74 --- unaffected
firefox75 --- unaffected
firefox76 blocking verified

People

(Reporter: opoprus, Assigned: jandem)

Details

Attachments

(1 file)

[Tracking Requested - why for this release]:

[Tracking Requested - why for this release]:

[Tracking Requested - why for this release]:

[Tracking Requested - why for this release]:

Central as beta simulation

Treeherder link: https://treeherder.mozilla.org/#/jobs?repo=try&resultStatus=testfailed%2Cbusted%2Cexception%2Cretry%2Cusercancel%2Crunnable&revision=6666671573cf6e001482518918d2a4fa5cdce5f9&selectedJob=293482086

Failure log: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=293482086&repo=try&lineNumber=8052

[task 2020-03-17T11:46:05.750Z] 11:46:05 ERROR - /builds/worker/checkouts/gecko/js/src/jit/CacheIR.h:2688:15: error: private field 'lhsVal_' is not used [-Werror,-Wunused-private-field]
[task 2020-03-17T11:46:05.750Z] 11:46:05 INFO - HandleValue lhsVal_;
[task 2020-03-17T11:46:05.750Z] 11:46:05 INFO - ^
[task 2020-03-17T11:46:05.750Z] 11:46:05 INFO - 1 error generated.
[task 2020-03-17T11:46:05.750Z] 11:46:05 INFO - /builds/worker/checkouts/gecko/config/rules.mk:745: recipe for target 'Unified_cpp_js_src_jit2.o' failed
[task 2020-03-17T11:46:05.750Z] 11:46:05 ERROR - make[4]: *** [Unified_cpp_js_src_jit2.o] Error 1
[task 2020-03-17T11:46:05.750Z] 11:46:05 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/js/src/jit'
[task 2020-03-17T11:46:05.750Z] 11:46:05 INFO - make[4]: *** Waiting for unfinished jobs....
[task 2020-03-17T11:46:05.765Z] 11:46:05 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/config/external/icu/common'
[task 2020-03-17T11:46:05.766Z] 11:46:05 INFO - config/external/icu/common/ucol_swp.o
[task 2020-03-17T11:46:05.766Z] 11:46:05 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/config/external/icu/common'
[task 2020-03-17T11:46:05.801Z] 11:46:05 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/config/external/icu/i18n'
[task 2020-03-17T11:46:05.803Z] 11:46:05 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang++ -std=gnu++17 -o number_rounding.o -c -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DNDEBUG=1 -DTRIMMED=1 -DU_I18N_IMPLEMENTATION -DU_USING_ICU_NAMESPACE=0 -DU_NO_DEFAULT_INCLUDE_UTF_HEADERS=1 -DU_HIDE_OBSOLETE_UTF_OLD_H=1 -DUCONFIG_NO_LEGACY_CONVERSION -DUCONFIG_NO_TRANSLITERATION -DUCONFIG_NO_REGULAR_EXPRESSIONS -DU_CHARSET_IS_UTF8 -DUNISTR_FROM_CHAR_EXPLICIT=explicit -DUNISTR_FROM_STRING_EXPLICIT=explicit -DU_HAVE_NL_LANGINFO_CODESET=0 -I/builds/worker/checkouts/gecko/config/external/icu/i18n -I/builds/worker/workspace/obj-build/config/external/icu/i18n -I/builds/worker/checkouts/gecko/intl/icu/source/common -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -fPIC -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Wunused-function -Wunused-variable -Werror=non-literal-null-conversion -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -Wno-unknown-warning-option -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fcrash-diagnostics-dir=/builds/worker/artifacts -fno-exceptions -fno-strict-aliasing -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O2 -fno-omit-frame-pointer -funwind-tables -frtti -fexperimental-new-pass-manager -MD -MP -MF .deps/number_rounding.o.pp /builds/worker/checkouts/gecko/intl/icu/source/i18n/number_rounding.cpp
[task 2020-03-17T11:46:05.803Z] 11:46:05 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/config/external/icu/i18n'
[task 2020-03-17T11:46:05.819Z] 11:46:05 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/config/external/icu/i18n'
[task 2020-03-17T11:46:05.819Z] 11:46:05 INFO - config/external/icu/i18n/number_scientific.o
[task 2020-03-17T11:46:05.820Z] 11:46:05 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/config/external/icu/i18n'
[task 2020-03-17T11:46:05.859Z] 11:46:05 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/media/libjpeg'
[task 2020-03-17T11:46:05.859Z] 11:46:05 INFO - media/libjpeg/jcomapi.o
[task 2020-03-17T11:46:05.860Z] 11:46:05 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang -std=gnu99 -o jcomapi.o -c -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DNDEBUG=1 -DTRIMMED=1 -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/media/libjpeg -I/builds/worker/workspace/obj-build/media/libjpeg -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -fPIC -include /builds/worker/workspace/obj-build/mozilla-config.h -DMOZILLA_CLIENT -Qunused-arguments -fcrash-diagnostics-dir=/builds/worker/artifacts -fno-strict-aliasing -ffunction-sections -fdata-sections -fno-math-errno -pthread -fPIC -pipe -g -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O2 -fno-omit-frame-pointer -funwind-tables -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wclass-varargs -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Werror=non-literal-null-conversion -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -fexperimental-new-pass-manager -MD -MP -MF .deps/jcomapi.o.pp /builds/worker/checkouts/gecko/media/libjpeg/jcomapi.c
[task 2020-03-17T11:46:05.861Z] 11:46:05 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/media/libjpeg'
[task 2020-03-17T11:46:05.902Z] 11:46:05 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/third_party/prio'
[task 2020-03-17T11:46:05.902Z] 11:46:05 INFO - third_party/prio/server.o
[task 2020-03-17T11:46:05.903Z] 11:46:05 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang -std=gnu99 -o server.o -c -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DNDEBUG=1 -DTRIMMED=1 -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/third_party/prio -I/builds/worker/workspace/obj-build/third_party/prio -I/builds/worker/checkouts/gecko/security/nss/lib/freebl/mpi -I/builds/worker/checkouts/gecko/third_party/msgpack/include -I/builds/worker/checkouts/gecko/third_party/prio/include -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -fPIC -include /builds/worker/workspace/obj-build/mozilla-config.h -DMOZILLA_CLIENT -Qunused-arguments -fcrash-diagnostics-dir=/builds/worker/artifacts -fno-strict-aliasing -ffunction-sections -fdata-sections -fno-math-errno -pthread -fPIC -pipe -g -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O2 -fno-omit-frame-pointer -funwind-tables -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wclass-varargs -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Werror=non-literal-null-conversion -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -fexperimental-new-pass-manager -MD -MP -MF .deps/server.o.pp /builds/worker/checkouts/gecko/third_party/prio/prio/server.c
[task 2020-03-17T11:46:05.903Z] 11:46:05 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/third_party/prio'
[task 2020-03-17T11:46:05.958Z] 11:46:05 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/config/external/icu/common'

Flags: needinfo?(jdemooij)
Assignee: nobody → jdemooij
Status: NEW → ASSIGNED
Flags: needinfo?(jdemooij)
Pushed by jdemooij@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/05764e246d48 Fix a -Wunused-private-field warning on beta. r=iain
Severity: normal → critical
Priority: -- → P1
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: