Bug 1623071 - Fix a -Wunused-private-field warning on beta. r=iain

Differential Revision: https://phabricator.services.mozilla.com/D67146